Fixed link that was not changed

--- a/app_server/views/index.hbs
+++ b/app_server/views/index.hbs
@@ -58,10 +58,10 @@
 						<a href="/rooms"><img src="images/rooms.png" alt="Img"></a>
 					</div>
 					<div class="section">
-						<a href="dives.html"><img src="images/dive-site.png" alt="Img"></a>
+						<a href="/travel"><img src="images/dive-site.png" alt="Img"></a>
 					</div>
 					<div class="section">
-						<a href="foods.html"><img src="images/food.png" alt="Img"></a>
+						<a href="/meals"><img src="images/food.png" alt="Img"></a>
 					</div>
 				</div>
 			</div>
