--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -10,8 +10,13 @@
         </p>
         <p class="card-text" [innerHTML]="trip.description">
         </p>
-        <div>
-            <button (click)="editTrip(trip)" class="btn btn-info">Edit Trip</button>
+        <div class="row justify-content-between">
+            <div class="col-md-4">
+                <button (click)="editTrip(trip)" class="btn btn-info">Edit Trip</button>
+            </div>
+            <div class="col-md-4">
+                <button (click)="deleteTrip(trip)" class="btn btn-danger">Delete Trip</button>
+            </div>
         </div>
     </div>
 </div>
